# dmscatter

./: .dmformfactor-V6-clean.m.swp  .dmformfactor-V6.m.swn  .dmformfactor-V6.m.swo  .dmformfactor-V6.m.swp  .gitignore  .tmp1arg.m.swp  .tmp2arg.m.swp  LICENSE  NOTICE  README  README.md  RELEASE  darkmatter.tar  dmformfactor-V6-barebones.m  dmformfactor-V6-clean.m  dmformfactor-V6.m  test1.nb  testing.nb  tmp2arg.m
bigstick/: F19.wfn  autoinput.bigstick  bigstick.x  distrodata.bigstick  f19.wfn  fort.36  fort.46  input.f19  nnopsvsjumps.bigstick  procmemload.bigstick  slices.bigstick  w18.int
chengfung/: Makefile  ResponseNuclear.f90  darkmatter.x  darkmattermain.f90  inpu  spspace.mod  stateinfo.mod  test1.nb
docs/: .refs.bib.swp  Makefile  details.md  index.html  intro.md  keywords.md  manual.fdb_latexmk  manual.md  manual.tex  notes.fdb_latexmk  notes.tex  notes.txt  nuclear.md  python.md  refs.bib  (+2 more)
src/: .controlfiler.f90.swp  .eventrate.f90.swp  .modules.f90.swp  .quadrature.f90.swp  .tmp2.swp  CMakeLists.txt  Makefile  bessel.f90  boole.f90  cg.f90  coefficients.f90  constants.f90  controlfile.f90  controlfiler.f90  controlfiler.f90.bak  crosssection.f90  darkmatter.f90  darkmatter.x  darkmattermain.f90  darkmattermain.f90.bak  densities.f90  deventrate.f90  diffcrosssection.f90  distributions.f90  dmf90factor.f90  dmfortfactor  dmfortfactor.f90  dmparticles.mod  dmresponse.f90  dmresponse.mod  dmresponse2.f90  dmresponse_iso.f90  dmresponse_lib.f90  dmresponse_pn.f90  dmresponsefun.f90  dmresponselib.f90  dmscatter.f90  eft.f90  eventrate.f90  eventrate.f90.bak  (+42 more)
(+1074 files in other folders)
